[package]
name = "knots"
version = "0.2.0"
authors = ["truelossless <esteban.gressard@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.13.0"
gumdrop = "0.8.0"
nom = "6.1.0"
anyhow = "1.0.34"
wkhtmltopdf = "0.3.0"