[package]
name = "knots"
version = "0.3.1"
authors = ["truelossless <esteban.gressard@gmail.com>"]
edition = "2018"

[dependencies]
base64 = "0.13.0"
gumdrop = "0.8.0"
nom = "6.1.0"
lazy_static = "1.4.0"

[dependencies.headless_chrome]
git = "https://github.com/atroche/rust-headless-chrome"
features = ["fetch"]